WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125319
"Use Selection for Find" doesn't work in PDF viewed in Safari
https://bugs.webkit.org/show_bug.cgi?id=125319
Summary
"Use Selection for Find" doesn't work in PDF viewed in Safari
Anders Carlsson
Reported
2013-12-05 14:22:46 PST
"Use Selection for Find" doesn't work in PDF viewed in Safari
Attachments
Patch
(6.47 KB, patch)
2013-12-05 14:25 PST
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2013-12-05 14:25:03 PST
Created
attachment 218544
[details]
Patch
Anders Carlsson
Comment 2
2013-12-05 14:27:51 PST
Committed
r160193
: <
http://trac.webkit.org/changeset/160193
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug